test/org/midica/testfiles/failing/soundbank-url-404.midica
INCLUDE inc/instruments.midica

SOUNDBANK http:/ /midica.org/assets/sound/404.sf2

0 c /4
